@@ -34,7 +34,11 @@ public interface Index<T> {
 	 */
 	void clear();
 
-	Object getStats();
+	/**
+	 * @return Collect and return some index statistics. Note that indexes are not required
+	 * to fill all fields. Also, individual indexes may use subclasses with additional fields.
+	 */
+	Stats getStats();
 
 	int getNodeCount();
 	
