@@ -1,0 +1,39 @@
+/*
+ * Copyright 2016 Tilmann Zaeschke
+ * 
+ * 
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.tinspin.index.phtree;
+
+import org.tinspin.index.Stats;
+
+import ch.ethz.globis.phtree.util.PhTreeStats;
+
+
+public class PHStats extends Stats {
+	private final PhTreeStats ph;
+
+	public PHStats(PhTreeStats s, int dims) {
+		super(0, 0, 0);
+		ph = s;
+		this.dims = dims;
+		nNodes = s.nNodes;
+		nEntries = (int) s.size;
+	}
+
+
+	public PhTreeStats getPhStats() {
+		return ph;
+	}
+}
