@@ -29,6 +29,7 @@ import org.tinspin.index.PointEntryDist;
 import org.tinspin.index.PointIndex;
 import org.tinspin.index.QueryIterator;
 import org.tinspin.index.QueryIteratorKNN;
+import org.tinspin.index.Stats;
 
 /**
  * This is a MX-quadtree implementation with configurable maximum depth, maximum nodes size, and
@@ -491,29 +492,16 @@ public class QuadTreeKD2<T> implements PointIndex<T> {
 	/**
 	 * Statistics container class.
 	 */
-	public static class QStats {
-		int nNodes;
-		int nNodesInner;
-		int nNodesLeaf;
-		int maxDepth;
-		int nEntries;
+	public static class QStats extends Stats {
 		final int[] histoValues = new int[100];
 		final int[] histoSubs;
 		static final int HISTO_MAX = (1 << 10) + 1;
 		final int dims;
 		public QStats(int dims) {
+			super(0, 0, 0);
 			this.dims = dims;
 			int histoSize = 1 + (1 << dims);
 			this.histoSubs = new int[histoSize > HISTO_MAX ? HISTO_MAX : histoSize];
-		}
-		public int getNodeCount() {
-			return nNodes;
-		}
-		public int getEntryCount() {
-			return nEntries;
-		}
-		public int getMaxDepth() {
-			return maxDepth;
 		}
 		public void histo(int pos) {
 			if (pos < histoSubs.length) {
@@ -524,7 +512,7 @@ public class QuadTreeKD2<T> implements PointIndex<T> {
 		}
 		@Override
 		public String toString() {
-			return "nNodes/inner/leaf=" + nNodes + "/" + nNodesInner + "/" + nNodesLeaf + ";\n"
+			return super.toString() + ";\n"
 					+ "histoVal:" + Arrays.toString(histoValues) + "\n"
 					+ "histoSub:" + Arrays.toString(histoSubs);
 		}
