@@ -1,6 +1,7 @@
 [2018-11-28]
 =======
 - Added CoverTree.
+- Generic Stats and (optional) kNN distance calculation count
 
 
 [2018-05-19]
